test/error/error.input057.zc
Previously defined struct/union:fred on line 2
